feat(case-create): add glossary api integration
